src/objects/SPoG_General_Settings__mdt/SPoG_General_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Custom List Meta data to store the SAP System information &amp; APIGEE connection information</description>
    <label>SPoG General Setting</label>
    <pluralLabel>SPoG General Settings</pluralLabel>
</CustomObject>