src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Access_Token_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Access_Token_Client_Secret__c</fullName>
    <label>APIGEE Access Token Client Secret</label>
    <type>TextArea</type>
</CustomField>