src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Access_Token_Path__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Access_Token_Path__c</fullName>
    <label>APIGEE Access Token Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>