src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Client_ID__c</fullName>
    <inlineHelpText>APIGEE Client ID</inlineHelpText>
    <label>APIGEE Client ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>