src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Client_Secret__c</fullName>
    <label>APIGEE Client Secret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>