src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Customer_Search_Path__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Customer_Search_Path__c</fullName>
    <label>APIGEE Customer Search Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>