src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Delivery_Path__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Delivery_Path__c</fullName>
    <label>APIGEE Delivery Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>