src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Order_Details_Path__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Order_Details_Path__c</fullName>
    <label>APIGEE Order Details Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>