src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Pricing_Path__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Pricing_Path__c</fullName>
    <label>APIGEE Pricing Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>