src/objects/SPoG_General_Settings__mdt/fields/APIGEE_Stocks_Overview_Path__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_Stocks_Overview_Path__c</fullName>
    <label>APIGEE Stocks Overview Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>