src/objects/SPoG_General_Settings__mdt/fields/APIGEE_UserStatus_Path__c.field-meta.xml
<CustomField>
    <fullName>APIGEE_UserStatus_Path__c</fullName>
    <label>APIGEE UserStatus Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>