src/objects/SPoG_General_Settings__mdt/fields/SAP_Client_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Client_Number__c</fullName>
    <inlineHelpText>Enter SAP Client Number eg: 900</inlineHelpText>
    <label>SAP Client Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>