src/objects/SPoG_General_Settings__mdt/fields/SAP_Source_System__c.field-meta.xml
<CustomField>
    <fullName>SAP_Source_System__c</fullName>
    <inlineHelpText>Enter the SAP Source System Name , eg: CIP</inlineHelpText>
    <label>SAP Source System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>